k8s/keycloak.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ptt-keycloak
  namespace: ptt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ptt-keycloak
  template:
    metadata:
      labels:
        app: ptt-keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:24.0.1
          args: ["start-dev", "--import-realm"]
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: realm-volume
              mountPath: /opt/keycloak/data/import
      volumes:
        - name: realm-volume
          configMap:
            name: ptt-keycloak-realm
---
apiVersion: v1
kind: Service
metadata:
  name: ptt-keycloak-service
  namespace: ptt
spec:
  selector:
    app: ptt-keycloak
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
