k8s/k8s-prod.yml
apiVersion: v1
kind: Service
metadata:
  name: ptt-frontend-service
spec:
  selector:
    app: ptt-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ptt-backend-service
spec:
  selector:
    app: ptt-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ptt-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ptt-frontend
  template:
    metadata:
      labels:
        app: ptt-frontend
    spec:
      containers:
      - name: frontend
        image: ghcr.io/2023-da-ptt/ptt-frontend:latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
      imagePullSecrets:
        - name: dockerconfigjson-github-com
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ptt-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ptt-backend
  template:
    metadata:
      labels:
        app: ptt-backend
    spec:
      containers:
      - name: backend
        image: ghcr.io/2023-da-ptt/ptt-backend:latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
      imagePullSecrets:
        - name: dockerconfigjson-github-com
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ptt-ingress
spec:
  rules:
  - host: "perftest.tech"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ptt-frontend-service
            port:
              number: 80
  - host: "api.perftest.tech"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ptt-backend-service
            port:
              number: 8080
